== Released [attachment:wiki:SoftwareReleases:eLife-1.6b6.zip V1.6b6]   ==

''' Script '''

Added the ability for a jython script to find the state of a label using the getLabelState call.  
The returned value is the key from the list of strings configured for use for the label device.
The pseudocode to use this would be 
  * listen for an event from a DLT
  * call getLabelState
  * execute parts of the script as appropriate based on the label return value. 

''' General '''

Added hooks for models to more easily add checksums to outgoing messages.
Override the  following method.

{{{
	Byte addCheckSum(byte [] rawMessage) 
	
	Store the resulting checksum from teh bytes of rawMessage into result and return it, return null for no checksum.
}}}	
	
== Released [attachment:wiki:SoftwareReleases:eLife-1.6b5.zip V1.6b5]   ==

''' Jetty '''

Ensure message and ID list commands do not crash the server with a HTTPS client. Resolves ticket [ticket:557]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b4.zip V1.6b4]   ==

''' Jetty ''' 

Ensure HTTPS server can deliver static HTML from address ../www. resolves [ticket:553]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b3.zip V1.6b3]   ==

''' Jetty ''' 

Updated file mappings

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b2.zip V1.6b2]   ==

''' Calendar ''' 
 
Fixed null pointer on macro save [ticket:543]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b1.zip V1.6b1]  [attachment:wiki:SoftwareReleases:eLife-1.6b1-libs.zip Libs-V1.6b1] ==

''' General '''

Released beta 1

''' Messaging '''

When a tcp client connection is dropped the list of current names will be updated and sent to all clients.
When a HTTP client calls /webclient/logout the list will also be updated and sent.

Resolves [ticket:6]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a19.zip V1.6a19] 

''' General '''

Solved CPU high usage problem. Resolves ticket [ticket:541]

''' Messaging '''
