@@ -10,7 +10,7 @@
 	  <RRDGRAPH DIR=".\JRobin\Graph\" />
 	  <RRDBDIRECTORY DIR=".\JRobin\" />
 	  <RRDXMLDIRECTORY DIR=".\JRobin\RRDDefinition\" />
-	  <JETTY PORT="8081" SSL_PORT="8443" ACTIVE="Y" USER_NAMES="N" />
+	  <JETTY PORT="8081" SSL_PORT="8443" ACTIVE="Y" USER_NAMES="Y" />
 	  <MAINTENANCE TIME="23:45" />
 </BOOTSTRAP>
 
