@@ -34,11 +34,11 @@ public class Security {
     logger = Logger.getLogger(this.getClass().getPackage().getName());
 
     
-    /* 
+    /*
 	connected = true;
 	return ;
     
-     /* */   
+     / */
      
 	InputStreamReader reader = new InputStreamReader(System.in);
 	BufferedReader in = new BufferedReader(reader);
