@@ -1,4 +1,4 @@
-#Thu Nov 09 15:46:36 EST 2006
+#Fri Nov 17 23:25:30 EST 2006
 major_version=1.6b
-minor_version=6
+minor_version=7
 app_name=eLife
